{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 148,
  "lineage": "70ab3bfd-de09-5cd5-3226-756af532ab5c",
  "resources": [
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tg-fargate-example",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/tg-fargate-example/6f028547ddbd3261",
            "arn_suffix": "targetgroup/tg-fargate-example/6f028547ddbd3261",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/tg-fargate-example/6f028547ddbd3261",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-fargate-example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "project",
              "Name": "tg-fargate-example",
              "Project": "test"
            },
            "tags_all": {
              "Environment": "project",
              "Name": "tg-fargate-example",
              "Project": "test"
            },
            "target_type": "ip",
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:security-group/sg-0f3f67fdd6d90399b",
            "description": "Fargate service security group",
            "egress": [],
            "id": "sg-0f3f67fdd6d90399b",
            "ingress": [],
            "name": "cluster_project-ecs-service-sg-20221012173854870900000001",
            "name_prefix": "cluster_project-ecs-service-sg-",
            "owner_id": "913213447178",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "project",
              "Name": "cluster_project-ecs-service-sg",
              "Project": "test"
            },
            "tags_all": {
              "Environment": "project",
              "Name": "cluster_project-ecs-service-sg",
              "Project": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1064027126",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f3f67fdd6d90399b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-fargate.aws_security_group.ecs_service",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:route-table/rtb-099e9eec948aff3c0",
            "id": "rtb-099e9eec948aff3c0",
            "owner_id": "913213447178",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "projectTESTVPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "projectTESTVPC-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:route-table/rtb-03da64547ee634fa2",
            "id": "rtb-03da64547ee634fa2",
            "owner_id": "913213447178",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "projectTESTVPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "projectTESTVPC-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060015261136f1636",
            "route_table_id": "rtb-099e9eec948aff3c0",
            "subnet_id": "subnet-0d96b6c4c4dc8fdfc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0493b19862f81a0a6",
            "route_table_id": "rtb-03da64547ee634fa2",
            "subnet_id": "subnet-0cf79ce26c3137b39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-0d96b6c4c4dc8fdfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d96b6c4c4dc8fdfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "projectTESTVPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "projectTESTVPC-private-us-east-1a"
            },
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-0cf79ce26c3137b39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf79ce26c3137b39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "projectTESTVPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "projectTESTVPC-private-us-east-1b"
            },
            "vpc_id": "vpc-089f5a08fa13f0bff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:vpc/vpc-089f5a08fa13f0bff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027112c8a50590659",
            "default_route_table_id": "rtb-09932254742e2dc5b",
            "default_security_group_id": "sg-098ab5c55926cda28",
            "dhcp_options_id": "dopt-0f9cc317b1fc963ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089f5a08fa13f0bff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09932254742e2dc5b",
            "owner_id": "913213447178",
            "tags": {
              "Name": "projectTESTVPC"
            },
            "tags_all": {
              "Name": "projectTESTVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}